# chimera-fli

./: .gitignore  README.md  fliusb.ko  pyproject.toml
chimera_fli/instruments/: flidriver.py  flifilterwheel.py  flisdk.py  flisdk_mock.py
