[project]
name = "chimera-fli"
version = "0.1.0"
description = "FLI USB filter wheel instrument plugin for Chimera"
license = "GPL-2.0-or-later"
authors = [
    { name = "Artur Camera Segat", email = "artur.segat@ecomp.ufsm.br"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chimera",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["N802", "N803"]

[tool.ruff.lint.flake8-copyright]
notice-rgx = "(?i)# SPDX-FileCopyrightText:\\s\\d{4}(-(\\d{4}|present))*"

[tool.uv.sources]
chimera = { git = "https://github.com/astroufsc/chimera.git" }
